--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ authors = ["frag <francesco@amethix.com>"]
 name = "fofscreen"
 version = "0.1.0"
 edition = "2018"
-# build = "build.rs"
+build = "build.rs"
 
 [dependencies]
 clap = "2.33.3"
@@ -13,7 +13,8 @@ glutin = "0.27.0"
 flume = "0.10.7"
 cpp = "0.5.4"
 image = "0.23.4"
-# lazy_static = "1.4.0"
+anyhow = "1.0"
+tch = { version = "0.5.0" }
 
 # [workspace]
 # members = ["capture", "detect"]
@@ -22,7 +23,9 @@ image = "0.23.4"
 cpp_build = "0.5.4"
 reqwest = {version = "0.9.3", optional = true}
 bzip2 = { version = "0.3.3", optional = true }
+tch = { version = "0.5.0", optional = true }
 
 [features]
 default = []
 download-models = ["reqwest", "bzip2"]
+torch-backend = ["tch"]
