--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 
 [dependencies]
 clap = "2.33.3"
-nokhwa = { version = "0.3.0", features = ["input-uvc"] }
+nokhwa = { version = "0.3.0", features = ["input-uvc", "input-v4l"] }
 glium = "0.30.0"
 glutin = "0.27.0"
 flume = "0.10.7"
